# xllm-4090

./: CMakeLists.txt  README.md  main.cpp
benchmark/: benchmark.cpp  benchmark_batch.cpp  prompts.txt  shareGPT.txt  shareGPT_sample.txt
include/: data.h  device.h  executor.h  file.h  model.h  operator.h  param.h  threadpool.h  utils.h  xllm.h
include/cpu/: cpudevice.h
include/cuda/: cudadevice.h  xllm-cuda.cuh
scripts/: export_tokenizer.py  export_weight.py  requirements.txt  test.py
src/: data.cpp  device.cpp  executor.cpp  model.cpp  param.cpp  quant.cpp  xllm.cpp
src/cpu/: cpudevice.cpp  operator.cpp
src/cuda/: cudadevice.cpp  xllm-cuda.cu
tests/: CMakeLists.txt  test_data.cpp  test_main.cpp  test_opeartor.cpp  test_params.cpp  test_quant.cpp
